jaml/examples/invalid/brace_map_nl.jaml
# Brace maps with newlines are allowed in YAML, but not JAML.
# We may reconsider this.
# Oddly enough, as permissive as YAML is, it rejects trailing commas.
brace_map_nl: {
  a: 1, 
  b: 2, 
  c: 3
}
